# copilot-testing

./: Cargo.toml  README.md  breakout.py  index.html  package-lock.json  package.json  server.js  style.css
js/: index.js
src/: game.rs  lib.rs
src/entities/: ball.rs  brick.rs  mod.rs  paddle.rs
