[package]
name = "breakout-wasm"
version = "0.1.0"
edition = "2021"
description = "A simple breakout clone built with Rust and WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'CanvasRenderingContext2d',
  'Window',
  'Event',
  'KeyboardEvent',
  'EventTarget',
  'Performance',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
